# py-ts-exploration

./: .editorconfig  .env.local  .env.test  .gitignore  .pre-commit-config.yaml  biome.jsonc  dprint.jsonc  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  readme.md  todo.md  tsconfig.browser.json  tsconfig.json  tsconfig.node.json  tsconfig.shared.json  vite.config.ts
.github/actions/python-deps/: action.yml
.github/actions/ts-deps/: action.yml
.github/workflows/: ci.yml  lint.yml
backend/: main.py  test_main.py
backend/lib/: other.py  test_other.py
backend/lib/settings/: __init__.py
backend/server/: __init__.py
frontend/: main.tsx
frontend/components/: button.test.tsx  button.tsx
frontend/test-utils/: setup.ts
